--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.35.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fs-extra": "^11.3.3",
     "i": "^0.3.7",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3"
